@@ -10,6 +10,7 @@ Checkbox, Use .(s)lt traps, slt_traps, KEYBOARD_s
 Checkbox, Allow (w)rites to ROM, writable_roms, KEYBOARD_w
 Checkbox, A(u)to-save settings, autosave_settings, KEYBOARD_u
 Checkbox, (C)olour TV, colour_tv, KEYBOARD_c
+Checkbox, Confirm (d)angerous actions, confirm_dangerous, KEYBOARD_d
 
 rzx
 RZX Options
